src/css/index.css
html,body {
  height: 100%;
}
body {
  background-color: #333;
  overflow: hidden; /* Questionable: It's useful to have scratch space below you can scroll to. */
}

/* Flex grid items */

.react-grid-item {
  /* emulate bootstrap .flex-column: */
  -webkit-box-orient: vertical!important;
  -webkit-box-direction: normal!important;
  -ms-flex-direction: column!important;
  flex-direction: column!important;

  /* emulate bootstrap .d-flex: */
  display: -webkit-box!important;
  display: -ms-flexbox!important;
  display: flex!important;

  /* So the resize handle position looks correct: */
  padding-right: 10px;
}

/* Tool styles */

.bg-light {
  background-color: #222!important;
  color: lightgrey;
}
.bg-light a {
  color: #9bb7d6;
}
.bg-black {
  background-color: black;
  color: lightgrey;
}
.title {
  color: lightgrey;
}
.scroll {
  overflow-y: auto;
}
.details {
  font-size: 80%;
  opacity: 0.8;
}
pre {
  color: lightgrey;
}

/* Spatial and t-SNE controls */

.btn.icon {
  padding: 0;
  height: 2em;
  width: 2em;
  background-color: white;
}
.btn.icon > svg {
  vertical-align: middle;
}
.roll-up {
  height: 2em; /* Matches .btn.icon */
  overflow: hidden;
}
.roll-up:hover {
  animation-name: roll-up;
  animation-duration: 0.5s;
  animation-fill-mode: forwards;
}
@keyframes roll-up {
  0% { height: 2em; }
  100% { height: 100%; }
}
.tool {
  z-index: 1000;
  opacity: .65;
  color: black;
}
.tool:hover {
  opacity: .90;
}

/* Cell Tooltips */
.cell-emphasis-crosshair, .cell-emphasis-vertical {
    z-index: 5;
    position: absolute;
    pointer-events: none;
    background-color: white;
}

.cell-emphasis-vertical {
    /* offset by the same amount as the container (.card-body) padding */
    transform: translateX(1.25rem);
}

.cell-tooltip-wrapper {
    position: relative;
}

.cell-tooltip {
    z-index: 1001;
    position: absolute;
    pointer-events: none;
    height: auto;
    width: auto;
    box-sizing: border-box;
    opacity: 0;
    padding: 0.5rem;
    border-radius: 0.25rem;
    border: 1px solid gray;

    animation-name: cell-tooltip;
    animation-duration: 0.5s;
    animation-fill-mode: forwards;
}

.cell-tooltip > table > tbody > tr > th, .cell-tooltip > table > tbody > tr > td {
    font-size: 80%;
    opacity: 0.8;
}

@keyframes cell-tooltip {
    from {
        opacity: 0;
    }
    to {
        opacity: 0.9;
    }
}

